.opsera-pantry-pal/k8s/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pantry-pal
  labels:
    app: pantry-pal
    tenant: opsera
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: pantry-pal-qa.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pantry-pal-stable
                port:
                  number: 80
